1. Installed sass npm package as a devDependency 2. Minor keyword change in package.json 3. Added package-lock.json to .gitignore

--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "css",
     "scss",
     "javascript",
-    "web",
-    "development"
+    "web development"
   ],
   "author": "Akshayakumar Janaj",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/janajakshayakumar24/webdev-fundamentals/issues"
   },
-  "homepage": "https://github.com/janajakshayakumar24/webdev-fundamentals#readme"
+  "homepage": "https://github.com/janajakshayakumar24/webdev-fundamentals#readme",
+  "devDependencies": {
+    "sass": "^1.79.5"
+  }
 }
